--- a/telas_finais/contato.html
+++ b/telas_finais/contato.html
@@ -175,15 +175,130 @@
 
 <!-- aqui -->
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-10">
+    <div class="row justify-content-center">
+        <div class="col-sm-4 teste_col">
             <img src="image/coloque_imagem.PNG" class="img_ctt">
         </div>
-        <div class="col-sm-10">
+        <div class="col-sm-5  teste2_col">
+            <form action="">
+                <label for="Nome">Nome</label>
+                <input type="text" id="Nome" placeholder="Nome Completo" required>
 
+                <label for="Email">Email</label>
+                <input type="email" id="Email" placeholder="Email Para Contato" required>
+
+                <label for="Telefone">Telefone</label>
+                <input type="tel" id="Telefone" placeholder="Telefone Para Contato" required>
+
+                <label for="Data">Data Do Evento</label>
+                <input type="date" id="Data" required>
+
+                <label for="Evento">Tipo Do Evento</label>
+                <select id="Evento">
+                    <option value="1">Recreação</option>
+                    <option value="2">Aniversário temático</option>
+                    <option value="3">Programação de Férias - Condomínios e Clubes</option>
+                    <option value="4">Community Day</option>
+                    <option value="5">Game 2030</option>
+                    <option value="6">Kids Day</option>
+                    <option value="7">Leilão Temático</option>
+                    <option value="8">Robótica</option>
+                    <option value="9">Scape Room</option>
+                    <option value="10">SIPAT</option>
+                    <option value="11">Teatro</option>
+                    <option value="12">Batalha Nerf</option>
+                    <option value="13">Bolhas Gigantes</option>
+                    <option value="14">Catavento</option>
+                    <option value="15">Culinária</option>
+                    <option value="16">Pintura em Tela</option>
+                    <option value="17">Pulseira Macramê</option>
+                    <option value="18">Robótica</option>
+                    <option value="19">Slime</option>
+                    <option value="20">Terrário</option>
+                    <option value="21">Clínicas Esportivas</option>
+                    <option value="22">Estação Fitness</option>
+                </select>
+
+                <label for="Pessoas">Quantidade De Pessoas</label>
+                <input type="number" id="Quantidade" min="1">
+
+                <label for="Idade">Idade Do Aniversariante</label>
+                <input type="number" id="Idade" min="0">
+
+                <input type="button" value="Enviar" onclick="Send()" id="enviar">
+            </form>
         </div>
     </div>
 </div>
+
+<!-- 
+<div class="container-fluid">
+    <div class="row bg-dark justify-content-center w-50">
+        <div class="col-sm-5">
+            <img src="img/221e5da7b737665d1d8d38283baf6817.jpg" class="img_ctt">
+        </div>
+        <div class="col-sm-5">
+            <form >
+                <div>
+                <div class="row">
+                    <label for="name" class="form-label ">Nome</label>
+                    <input type="text" class="form-control col" id="name" placeholder="Primeiro Nome">
+                </div>
+                <br>
+                <div class="row">
+                    <label for="email" class="form-label ">Email adress:</label>
+                    <input type="email" class="form-control " id="email" placeholder="nome@exemplo.com">
+                </div>
+                <br>
+                
+                <div class="row">
+                    <div class="col-6 tel">
+                        <label for="telefone" class="form-label">Telefone:</label>
+                        <input id="telefone" class="form-control " type="tel">
+                    </div>
+                    <div class="col-6 data">
+                        <label for="name" class="form-label ">Data do Evento</label>
+                        <input type="date" class="form-control " id="name" required>
+                    </div>
+                </div>
+                <br>
+
+
+                <div class="row">
+                    <label for="inputState" class="form-label">Tipo do Evento</label>
+                    <select class="form-select" aria-label="Default select example">
+                        <option selected>Selecione um evento</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
+            
+                <br>
+                <div class="row pessoas">
+                    <label for="quantity" class="form-label">Quantidade de pessoas:</label>
+                    <input type="number" class="form-control" id="quantity" name="quantity">
+                </div>
+                <br>
+
+                <div class="row idade">
+                    <label for="quantity" class="form-label">Idade do Aniversasriante:</label>
+                    <input type="number" class="form-control" id="quantity" name="quantity">
+                </div>
+                <br>
+                <br>
+
+                <div class="row justify-content-center">
+                    <div class="col-1 text-center">
+                        <button type="submit" class="btn btn-primary enviar">Submit</button>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+    </div>
+</div> -->
+
 
         <div class="container-fluid">
             <div class="container-fluid formulario">
